--- a/index.css
+++ b/index.css
@@ -1,28 +1,248 @@
+.header{
+    background-color: navy;
+}
+
 body{
-background-color: #ffffff;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect fill='none' stroke-width='100' id='a' x='-400' y='-300' width='800' height='600'/%3E%3C/defs%3E%3Cg transform='rotate(0 0 0)' style='transform-origin:center'%3E%3Cg transform='rotate(0 0 0)' style='transform-origin:center'%3E%3Cg transform='rotate(0 0 0)' style='transform-origin:center'%3E%3Cg transform='translate(1000 750)'%3E%3Cuse stroke='%23ffffff' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ffeeee' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ffdede' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ffcdcd' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ffbdbd' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ffacac' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff9c9c' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff8b8b' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff7b7b' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff6a6a' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff5a5a' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff4949' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff3939' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff2828' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff1818' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff0707' href='%23a' transform='rotate(0 0 0)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
-font-family: font;
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='400' cy='400' r='11.2%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23ffde3a'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='400' cy='400' r='100%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23fff41c'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='800'/%3E%3Cg fill-opacity='0'%3E%3Cpath fill='url(%23b)' d='M998.7 439.2c1.7-26.5 1.7-52.7 0.1-78.5L401 399.9c0 0 0-0.1 0-0.1l587.6-116.9c-5.1-25.9-11.9-51.2-20.3-75.8L400.9 399.7c0 0 0-0.1 0-0.1l537.3-265c-11.6-23.5-24.8-46.2-39.3-67.9L400.8 399.5c0 0 0-0.1-0.1-0.1l450.4-395c-17.3-19.7-35.8-38.2-55.5-55.5l-395 450.4c0 0-0.1 0-0.1-0.1L733.4-99c-21.7-14.5-44.4-27.6-68-39.3l-265 537.4c0 0-0.1 0-0.1 0l192.6-567.4c-24.6-8.3-49.9-15.1-75.8-20.2L400.2 399c0 0-0.1 0-0.1 0l39.2-597.7c-26.5-1.7-52.7-1.7-78.5-0.1L399.9 399c0 0-0.1 0-0.1 0L282.9-188.6c-25.9 5.1-51.2 11.9-75.8 20.3l192.6 567.4c0 0-0.1 0-0.1 0l-265-537.3c-23.5 11.6-46.2 24.8-67.9 39.3l332.8 498.1c0 0-0.1 0-0.1 0.1L4.4-51.1C-15.3-33.9-33.8-15.3-51.1 4.4l450.4 395c0 0 0 0.1-0.1 0.1L-99 66.6c-14.5 21.7-27.6 44.4-39.3 68l537.4 265c0 0 0 0.1 0 0.1l-567.4-192.6c-8.3 24.6-15.1 49.9-20.2 75.8L399 399.8c0 0 0 0.1 0 0.1l-597.7-39.2c-1.7 26.5-1.7 52.7-0.1 78.5L399 400.1c0 0 0 0.1 0 0.1l-587.6 116.9c5.1 25.9 11.9 51.2 20.3 75.8l567.4-192.6c0 0 0 0.1 0 0.1l-537.3 265c11.6 23.5 24.8 46.2 39.3 67.9l498.1-332.8c0 0 0 0.1 0.1 0.1l-450.4 395c17.3 19.7 35.8 38.2 55.5 55.5l395-450.4c0 0 0.1 0 0.1 0.1L66.6 899c21.7 14.5 44.4 27.6 68 39.3l265-537.4c0 0 0.1 0 0.1 0L207.1 968.3c24.6 8.3 49.9 15.1 75.8 20.2L399.8 401c0 0 0.1 0 0.1 0l-39.2 597.7c26.5 1.7 52.7 1.7 78.5 0.1L400.1 401c0 0 0.1 0 0.1 0l116.9 587.6c25.9-5.1 51.2-11.9 75.8-20.3L400.3 400.9c0 0 0.1 0 0.1 0l265 537.3c23.5-11.6 46.2-24.8 67.9-39.3L400.5 400.8c0 0 0.1 0 0.1-0.1l395 450.4c19.7-17.3 38.2-35.8 55.5-55.5l-450.4-395c0 0 0-0.1 0.1-0.1L899 733.4c14.5-21.7 27.6-44.4 39.3-68l-537.4-265c0 0 0-0.1 0-0.1l567.4 192.6c8.3-24.6 15.1-49.9 20.2-75.8L401 400.2c0 0 0-0.1 0-0.1L998.7 439.2z'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: font;
+    color: #000080;
 }
 
 .dark-mode{
-background-color: #000000;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect fill='none' stroke-width='100' id='a' x='-400' y='-300' width='800' height='600'/%3E%3C/defs%3E%3Cg transform='rotate(0 0 0)' style='transform-origin:center'%3E%3Cg transform='rotate(0 0 0)' style='transform-origin:center'%3E%3Cg transform='rotate(0 0 0)' style='transform-origin:center'%3E%3Cg transform='translate(1000 750)'%3E%3Cuse stroke='%23000000' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23110000' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23220101' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23330101' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23440202' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23550202' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23660303' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23770303' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23880404' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23990404' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23aa0505' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23bb0505' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23cc0606' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23dd0606' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ee0707' href='%23a' transform='rotate(0 0 0)'/%3E%3Cuse stroke='%23ff0707' href='%23a' transform='rotate(0 0 0)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='400' cy='400' r='0%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23000080'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='400' cy='400' r='0%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23000080'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='800'/%3E%3Cg fill-opacity='0'%3E%3Cpath fill='url(%23b)' d='M998.7 439.2c1.7-26.5 1.7-52.7 0.1-78.5L401 399.9c0 0 0-0.1 0-0.1l587.6-116.9c-5.1-25.9-11.9-51.2-20.3-75.8L400.9 399.7c0 0 0-0.1 0-0.1l537.3-265c-11.6-23.5-24.8-46.2-39.3-67.9L400.8 399.5c0 0 0-0.1-0.1-0.1l450.4-395c-17.3-19.7-35.8-38.2-55.5-55.5l-395 450.4c0 0-0.1 0-0.1-0.1L733.4-99c-21.7-14.5-44.4-27.6-68-39.3l-265 537.4c0 0-0.1 0-0.1 0l192.6-567.4c-24.6-8.3-49.9-15.1-75.8-20.2L400.2 399c0 0-0.1 0-0.1 0l39.2-597.7c-26.5-1.7-52.7-1.7-78.5-0.1L399.9 399c0 0-0.1 0-0.1 0L282.9-188.6c-25.9 5.1-51.2 11.9-75.8 20.3l192.6 567.4c0 0-0.1 0-0.1 0l-265-537.3c-23.5 11.6-46.2 24.8-67.9 39.3l332.8 498.1c0 0-0.1 0-0.1 0.1L4.4-51.1C-15.3-33.9-33.8-15.3-51.1 4.4l450.4 395c0 0 0 0.1-0.1 0.1L-99 66.6c-14.5 21.7-27.6 44.4-39.3 68l537.4 265c0 0 0 0.1 0 0.1l-567.4-192.6c-8.3 24.6-15.1 49.9-20.2 75.8L399 399.8c0 0 0 0.1 0 0.1l-597.7-39.2c-1.7 26.5-1.7 52.7-0.1 78.5L399 400.1c0 0 0 0.1 0 0.1l-587.6 116.9c5.1 25.9 11.9 51.2 20.3 75.8l567.4-192.6c0 0 0 0.1 0 0.1l-537.3 265c11.6 23.5 24.8 46.2 39.3 67.9l498.1-332.8c0 0 0 0.1 0.1 0.1l-450.4 395c17.3 19.7 35.8 38.2 55.5 55.5l395-450.4c0 0 0.1 0 0.1 0.1L66.6 899c21.7 14.5 44.4 27.6 68 39.3l265-537.4c0 0 0.1 0 0.1 0L207.1 968.3c24.6 8.3 49.9 15.1 75.8 20.2L399.8 401c0 0 0.1 0 0.1 0l-39.2 597.7c26.5 1.7 52.7 1.7 78.5 0.1L400.1 401c0 0 0.1 0 0.1 0l116.9 587.6c25.9-5.1 51.2-11.9 75.8-20.3L400.3 400.9c0 0 0.1 0 0.1 0l265 537.3c23.5-11.6 46.2-24.8 67.9-39.3L400.5 400.8c0 0 0.1 0 0.1-0.1l395 450.4c19.7-17.3 38.2-35.8 55.5-55.5l-450.4-395c0 0 0-0.1 0.1-0.1L899 733.4c14.5-21.7 27.6-44.4 39.3-68l-537.4-265c0 0 0-0.1 0-0.1l567.4 192.6c8.3-24.6 15.1-49.9 20.2-75.8L401 400.2c0 0 0-0.1 0-0.1L998.7 439.2z'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    color: white;
 }
-
-#b1{
-    float: right;
-}
-
 
 @font-face{
     font-family: font;
-    src: url(fonts/Hollywood\ Capital.ttf);
+    src: url(fonts/FrontPageNeue.otf);
 }
 
 .container{
     display: grid;
+    grid-template-columns: 40rem 40rem;
+    grid-template-rows: 25rem 25rem;
+    gap: [row gap] [col gap];
+    gap: 1rem 1rem;
+    gap: 1rem;
+    justify-content: center;
+    align-content: center;
+}
+
+.item-1{
+grid-column: 1/1;
+grid-row: 1/1;
+}
+
+.item-2{
+grid-column: 2/2;
+grid-row: 1/1;
+}
+
+.item-3{
+grid-column: 1/1;
+grid-row: 2/2;
+}
+
+.item-4{
+grid-column: 2/2;
+grid-row: 2/2;
+}
+
+h1{
+    text-align: center;
+    font-size: 3rem;
+    color: #FFDE3A;
+}
+
+h2{
+    text-align: center;
+    font-size: 2rem;
+}
+
+h3{
+    color: navy;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.mainc-container{
+    display: grid;
+    grid-template-columns: 5rem 25rem 25rem 25rem 5rem;
+    grid-template-rows: 35rem 35rem;
+    justify-content: center;
+    align-content: center;
+}
+
+.fillI{
+    grid-column: 1/1;
+    grid-row: 1/1;
+}
+
+.itemI{
+    grid-column: 2/2;
+    grid-row: 1/1;
+}
+
+.itemII{
+    grid-column: 3/3;
+    grid-row: 1/1;
+}
+
+.itemIII{
+    grid-column: 4/4;
+    grid-row: 1/1;
+}
+
+.fillII{
+    grid-column: 5/5;
+    grid-row: 1/1;
+}
+
+.fillIII{
+    grid-column: 1/1;
+    grid-row: 2/2;
+}
+
+.itemIV{
+    grid-column: 2/2;
+    grid-row: 2/2;
+}
+
+.itemV{
+    grid-column: 3/3;
+    grid-row: 2/2;
+}
+
+.itemVI{
+    grid-column: 4/4;
+    grid-row: 2/2;
+}
+
+.fillIV{
+    grid-column: 5/5;
+    grid-row: 2/2;
+}
+
+.bio-container{
+    display: grid;
+    grid-template-columns: 5rem 25rem 25rem 25rem 5rem;
+    grid-template-rows: 30rem 30rem;
+    justify-content: center;
+    align-content: center;
+}
+
+.item-fill{
+    grid-column: 1/1;
+    grid-row: 1/1;
+}
+
+.item1{
+    grid-column: 2/2;
+    grid-row: 1/1;
+}
+
+.item2{
+    grid-column: 3/3;
+    grid-row: 1/1;
+}
+
+.item3{
+    grid-column: 4/4;
+    grid-row: 1/1;
+}
+
+.item-fill2{
+    grid-column: 5/5;
+    grid-row: 1/1;
+}
+
+
+#h-two{
+    background-color: navy;
+    color: #FFDE3A;
+    font-size: 3rem;
+}
+
+#img1{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img2{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img3{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img4{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img-one{
+    width: 24rem;
+    height: 20rem;
+}
+
+#img-two{
+    width: 24rem;
+    height: 20rem;
+}
+
+#img-three{
+    width: 24rem;
+    height: 20rem;
+}
+
+#imgI{
+    width: 22rem;
+    height: 30rem;
+}
+
+#imgII{
+    width: 22rem;
+    height: 30rem;
+}
+
+#imgIII{
+    width: 22rem;
+    height: 30rem;
+}
+
+#imgIV{
+    width: 22rem;
+    height: 30rem;
+}
+
+#imgV{
+    width: 22rem;
+    height: 30rem;
+}
+
+#imgVI{
+    width: 22rem;
+    height: 30rem;
+}
+
+fieldset{
+border: 0px;
+}
+
+#b1{
+    float: right;
 }
