--- a/index.css
+++ b/index.css
@@ -19,6 +19,123 @@ body{
     color: white;
 }
 
+#img1{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img2{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img3{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+#img4{
+    width: 40rem;
+    height: 25rem;
+    border: solid navy 4px;
+}
+
+.dark-mode > .header > #h-one{
+    background-color: rgb(40, 187, 40);
+    color: white;
+}
+
+.dark-mode > h3{
+    color: white;
+}
+
+.dark-mode > #h-two{
+    color: white;
+}
+
+.dark-mode > .container > .item-1 > #img1{
+    border: white solid 4px;
+}
+
+.dark-mode > .container > .item-2 > #img2{
+    border: white solid 4px;
+}
+
+.dark-mode > .container > .item-3 > #img3{
+    border: white solid 4px;
+}
+
+.dark-mode > .container > .item-4 > #img4{
+    border: white solid 4px;
+}
+
+.dark-mode > .mainc-container > .itemI > #imgI{
+    border: solid rgb(40, 187, 40) 10px;
+}
+
+.dark-mode > .mainc-container > .itemII > #imgII{
+    border: solid rgb(40, 187, 40) 10px;
+}
+
+.dark-mode > .mainc-container > .itemIII > #imgIII{
+    border: solid rgb(40, 187, 40) 10px;
+}
+
+.dark-mode > .mainc-container > .itemIV > #imgIV{
+    border: solid rgb(40, 187, 40) 10px;
+}
+
+.dark-mode > .mainc-container > .itemV > #imgV{
+    border: solid rgb(40, 187, 40) 10px;
+}
+
+.dark-mode > .mainc-container > .itemVI > #imgVI{
+    border: solid rgb(40, 187, 40) 10px;
+}
+
+.dark-mode > .hof-container{
+    background-color: rgb(40, 187, 40);
+}
+
+.dark-mode > #hI{
+    color: white;
+}
+
+.dark-mode > #h1one{
+    color: white;
+}
+
+.dark-mode > #h3four{
+    color: white;
+}
+
+.dark-mode > .hof-container > .item1 > #img-one{
+    border: white solid 4px;
+}
+
+.dark-mode > .hof-container > .item2 > #img-two{
+    border: white solid 4px;
+}
+
+.dark-mode > .hof-container > .item3 > #img-three{
+    border: white solid 4px;
+}
+
+.dark-mode > .video-container > .video1 > iframe{
+    border: solid 10px rgb(40, 187, 40);
+}
+
+.dark-mode > .video-container > .video2 > iframe{
+    border: solid 10px rgb(40, 187, 40);
+}
+
+.dark-mode > a > #imgA{
+    border: solid 10px rgb(40, 187, 40);
+}
+
 @font-face{
     font-family: font;
     src: url(fonts/FrontPageNeue.otf);
@@ -55,29 +172,32 @@ grid-column: 2/2;
 grid-row: 2/2;
 }
 
-h1{
+#h-one{
     text-align: center;
-    font-size: 3rem;
+    font-size: 5rem;
     color: #FFDE3A;
 }
 
 h2{
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 h3{
     color: navy;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .mainc-container{
     display: grid;
-    grid-template-columns: 5rem 25rem 25rem 25rem 5rem;
-    grid-template-rows: 35rem 35rem;
+    grid-template-columns: 5rem 23rem 23rem 23rem 5rem;
+    grid-template-rows: 3rem 29rem 10rem 3rem 29rem 15rem;
     justify-content: center;
     align-content: center;
+    gap: [row gap] [col gap];
+    gap: 2rem 2rem;
+    gap: 2rem;
 }
 
 .fillI{
@@ -85,57 +205,133 @@ h3{
     grid-row: 1/1;
 }
 
-.itemI{
+#h4one{
     grid-column: 2/2;
     grid-row: 1/1;
+    font-size: 2rem;
+}
+
+.itemI{
+    grid-column: 2/2;
+    grid-row: 2/2;
+}
+
+#p1{
+    grid-column: 2/2;
+    grid-row: 3/3;
+    font-size: large;
+}
+
+#h4two{
+    grid-column: 3/3;
+    grid-row: 1/1;
+    font-size: 2rem;
 }
 
 .itemII{
     grid-column: 3/3;
+    grid-row: 2/2;
+}
+
+#p2{
+    grid-column: 3/3;
+    grid-row: 3/3;
+    font-size: large;
+}
+
+#h4three{
+    grid-column: 4/4;
     grid-row: 1/1;
+    font-size: 2rem;
 }
 
 .itemIII{
     grid-column: 4/4;
-    grid-row: 1/1;
+    grid-row: 2/2;
+}
+
+#p3{
+    grid-column: 4/4;
+    grid-row: 3/3;
+    font-size: large;
 }
 
 .fillII{
     grid-column: 5/5;
-    grid-row: 1/1;
+    grid-row: 2/2;
 }
 
 .fillIII{
     grid-column: 1/1;
-    grid-row: 2/2;
+    grid-row: 5/5;
+}
+
+#h4four{
+    grid-column: 2/2;
+    grid-row: 4/4;
+    font-size: 2rem;
 }
 
 .itemIV{
     grid-column: 2/2;
-    grid-row: 2/2;
+    grid-row: 5/5;
+}
+
+#p4{
+    grid-column: 2/2;
+    grid-row: 6/6;
+    font-size: large;
+}
+
+#h4five{
+    grid-column: 3/3;
+    grid-row: 4/4;
+    font-size: 2rem;
 }
 
 .itemV{
     grid-column: 3/3;
-    grid-row: 2/2;
+    grid-row: 5/5;
+}
+
+#p5{
+    grid-column: 3/3;
+    grid-row: 6/6;
+    font-size: large;
+}
+
+#h4six{
+    grid-column: 4/4;
+    grid-row: 4/4;
+    font-size: 2rem;
 }
 
 .itemVI{
     grid-column: 4/4;
-    grid-row: 2/2;
+    grid-row: 5/5;
+}
+
+#p6{
+    grid-column: 4/4;
+    grid-row: 6/6;
+    font-size: large;
 }
 
 .fillIV{
     grid-column: 5/5;
-    grid-row: 2/2;
+    grid-row: 5/5;
 }
 
-.bio-container{
+.hof-container{
     display: grid;
-    grid-template-columns: 5rem 25rem 25rem 25rem 5rem;
-    grid-template-rows: 30rem 30rem;
+    grid-template-columns: 3rem 30rem 30rem 30rem 3rem;
+    grid-template-rows: 6rem 24rem;
     justify-content: center;
     align-content: center;
+    gap: [row gap] [col gap];
+    gap: 1rem 1rem;
+    gap: 1rem;
+    background-color: #c32a2a;
 }
 
 .item-fill{
@@ -145,15 +341,30 @@ h3{
 
 .item1{
     grid-column: 2/2;
+    grid-row: 2/2;
+}
+
+#h3one{
+    grid-column: 2/2;
     grid-row: 1/1;
 }
 
 .item2{
     grid-column: 3/3;
+    grid-row: 2/2;
+}
+
+#h3two{
+    grid-column: 3/3;
     grid-row: 1/1;
 }
 
 .item3{
+    grid-column: 4/4;
+    grid-row: 2/2;
+}
+
+#h3three{
     grid-column: 4/4;
     grid-row: 1/1;
 }
@@ -163,86 +374,117 @@ h3{
     grid-row: 1/1;
 }
 
-
 #h-two{
-    background-color: navy;
-    color: #FFDE3A;
-    font-size: 3rem;
-}
-
-#img1{
-    width: 40rem;
-    height: 25rem;
-    border: solid navy 4px;
-}
-
-#img2{
-    width: 40rem;
-    height: 25rem;
-    border: solid navy 4px;
-}
-
-#img3{
-    width: 40rem;
-    height: 25rem;
-    border: solid navy 4px;
-}
-
-#img4{
-    width: 40rem;
-    height: 25rem;
-    border: solid navy 4px;
+    color: navy;
+    font-size: 5rem;
+    text-align: center;
 }
 
 #img-one{
-    width: 24rem;
+    width: 30rem;
     height: 20rem;
 }
 
 #img-two{
-    width: 24rem;
+    width: 30rem;
     height: 20rem;
 }
 
 #img-three{
-    width: 24rem;
+    width: 30rem;
     height: 20rem;
 }
 
 #imgI{
     width: 22rem;
     height: 30rem;
+    border: navy solid 10px;
 }
 
 #imgII{
     width: 22rem;
     height: 30rem;
+    border: navy solid 10px;
 }
 
 #imgIII{
     width: 22rem;
     height: 30rem;
+    border: navy solid 10px;
 }
 
 #imgIV{
     width: 22rem;
     height: 30rem;
+    border: navy solid 10px;
 }
 
 #imgV{
     width: 22rem;
     height: 30rem;
+    border: navy solid 10px;
 }
 
 #imgVI{
     width: 22rem;
     height: 30rem;
+    border: navy solid 10px;
 }
 
 fieldset{
 border: 0px;
 }
 
-#b1{
-    float: right;
+#h1one{
+    color: navy;
+    text-align: center;
+    font-size: 5rem;
+}
+
+#imgA{
+    width: 55rem;
+    height: 43rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: navy solid 10px;
+}
+
+.video-container{
+    display: grid;
+    grid-template-columns: 65rem;
+    grid-template-rows: 40rem 45rem;
+    justify-content: center;
+    align-content: center;
+    gap: [row gap] [col gap];
+    gap: 2rem 2rem;
+    gap: 2rem;
+}
+
+.video1{
+    grid-column: 1/1;
+    grid-row: 1/1;
+}
+
+.video2{
+    grid-column: 1/1;
+    grid-row: 2/2;
+}
+
+#h3four{
+    color: navy;
+    font-size: 3rem;
+    text-align: center;
+}
+
+iframe{
+    width: 65rem;
+    height: 40rem;
+    border: navy solid 10px;
+}
+
+#hI{
+    color: navy;
+    font-size: 5rem;
+    text-align: center;
 }
