--- a/index(2).css
+++ b/index(2).css
@@ -9,7 +9,7 @@ body{
 
 @font-face{
     font-family: font;
-    src: url(fonts/FrontPageNeue.otf);
+    src: url(./Fonts/FrontPageNeue.otf)
 }
 
 h1{
@@ -48,6 +48,7 @@ p{
     background-attachment: fixed;
     background-size: cover;
     color: white;
+    font-family: font;
 }
 
 .dark-mode > #img1{
