--- a/index(3).css
+++ b/index(3).css
@@ -32,7 +32,7 @@ img{
 
 @font-face{
     font-family: font;
-    src: url(fonts/FrontPageNeue.otf);
+    src: url(./Fonts/FrontPageNeue.otf);
 }
 
 label{
@@ -45,6 +45,7 @@ label{
     background-attachment: fixed;
     background-size: cover;
     color: white;
+    font-family: font;
 }
 
 .dark-mode > img{
